syntax = "proto3";

package money;
option go_package = "pb";

service MoneyCommand {
    // UserIDを指定して金額を増やす
    rpc Gain(MoneyGainRequest) returns (MoneyGainResponse);
}

message MoneyGainRequest {
    // ユーザーID
    uint64 user_id = 1;

    // 金額
    uint64 amount = 2;
}

message MoneyGainResponse {
}
